corrected text alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,7 @@ text-align: center;}
 h2 {color:rgb(209, 3, 3);
 text-align: center;}
 div {color:rgb(209, 3, 3)}
-p {color:rgb(209, 3, 3);
+.align-text {color:rgb(209, 3, 3);
 text-align: center;}
 a {color:rgb(209, 3, 3)}
 .center {
